# neuron-sim

./: CMakeLists.txt  README.md
cmake_modules/: FindNumPy.cmake
iv/.hg/: dirstate  hgrc  undo.desc
iv/.hg/cache/: branch2-served  rbc-revs-v1
iv/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
iv/.hg/store/data/: _copyright.i  _i_n_s_t_a_l_l.i  _makefile.in.i  _r_e_a_d_m_e.i  acinclude.m4.i  build.sh.i  chkstream.m4.i  configure.in.i  howtomingw.i  install-sh.i  makedist.i  mkinstalldirs.i
iv/.hg/store/data/src/: _makefile.in.i
iv/.hg/store/data/src/include/: _makefile.in.i  ivcarbon.h.i  ivmcw.h.i  ivversion.h.i  macivdef.h.i
iv/.hg/store/data/src/lib/: _makefile.in.i
nrn/: configure  configure.ac  nrnversion.sh
nrn/.hg/: dirstate  hgrc  undo.desc  undo.dirstate
nrn/.hg/cache/: branch2-served  rbc-names-v1  rbc-revs-v1
nrn/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
nrn/.hg/store/data/: _copyright.i  _i_n_s_t_a_l_l.i  _makefile.am.i  _r_e_a_d_m_e.i  build.sh.i  configure.ac.i  configure.in.i  extend__depcomp.sh.i  hg2nrnversion__h.sh.i  howtomingw.i  macosxconf.sh.i  mkalpha.sh.i  mswinmpiconf.i  nrnrpm.spec.in.i  nrnversion.sh.i  svn2nrn__h.sh.i
nrn/.hg/store/data/m4/: acinclude.m4.i  ivcheck.m4.i  nrnbg.m4.i  nrnjava.m4.i  nrnpython.m4.i  oddities.m4.i  withmpi.m4.i
nrn/.hg/store/data/share/lib/: _makefile.am.i  cleanup.i  nrn.defaults.in.i
nrn/.hg/store/data/src/: _makefile.am.i
nrn/.hg/store/data/src/_random123/: _makefile.am.i  aes.h.i  array.h.i  ars.h.i  philox.h.i  threefry.h.i
nrn/.hg/store/data/src/e__editor/: _makefile.am.i  buffer.c.i  carg__parser.c.i  carg__parser.h.i  ed.h.i  global.c.i  io.c.i  main.c.i  main__loop.c.i  regex.c.i  signal.c.i
nrn/.hg/store/data/src/gnu/: _a_c_g.cpp.i  _a_c_g.h.i  _m_l_c_g.cpp.i  _m_l_c_g.h.i  _makefile.am.i  _r_n_g.cpp.i  _r_n_g.h.i  _random.h.i  neuron__gnu__builtin.h.i
nrn/.hg/store/data/src/ivoc/: _makefile.am.i  apwindow.cpp.i  apwindow.h.i  axis.cpp.i  axis.h.i  checkpnt.cpp.i  checkpnt.h.i  classreg.cpp.i  classreg.h.i  datapath.cpp.i  field.cpp.i  field.h.i  fourier.cpp.i  fourier.h.i  gifimage.cpp.i  graph.cpp.i  graph.h.i  grglyph.cpp.i  grglyph.h.i  grmanip.cpp.i  hocmark.cpp.i  htlist.cpp.i  htlist.h.i  idraw.cpp.i  idraw.h.i  ivoc.cpp.i  ivoc.h.i  ivocmac.cpp.i  ivocmain.cpp.i  ivocrand.cpp.i  ivocvect.cpp.i  ivocvect.h.i  ivocwin.cpp.i  matrix.cpp.i  mlinedit.cpp.i  mymath.cpp.i  mymath.h.i  nrngsl.h.i  nrngsl__hc__radix2.c.i  nrngsl__real__radix2.c.i  (+52 more)
nrn/.hg/store/data/src/ivos/: listimpl.cpp.i  regexp.cpp.i  resource.cpp.i  string.cpp.i  ustring.cpp.i
nrn/.hg/store/data/src/mac/: _makefile.am.i  after-install.sh.i  idraw.sh.i  launch.c.i  macdist.pkgproj.in.i  mknrndll.sh.i  mos2nrn.sh.i  neurondemo.sh.i  nrngui.sh.i  postinstall.sh.in.i
nrn/.hg/store/data/src/memacs/: _makefile.am.i  ansi.c.i  basic.c.i  bind.c.i  buffer.c.i  display.c.i  edef.h.i  estruct.h.i  file.c.i  fileio.c.i  ibm.c.i  intfunc.h.i  line.c.i  lock.c.i  main.c.i  main1.c.i  random.c.i  region.c.i  search.c.i  spawn.c.i  tcap.c.i  termio.c.i  window.c.i  word.c.i
nrn/.hg/store/data/src/mesch/: dmacheps.c.i  extras.c.i  fft.c.i  ivecop.c.i  machine.h.i  matlab.c.i  matrixio.c.i  memory.c.i  memstat.c.i  pxop.c.i  sparse.c.i  sparseio.c.i  sprow.c.i  vecop.c.i  zmatio.c.i  zmatlab.c.i  zmemory.c.i  zvecop.c.i
nrn/.hg/store/data/src/modlunit/: _makefile.am.i  consist.c.i  declare.c.i  init.c.i  io.c.i  kinunit.c.i  lex.l.i  list.c.i  model.c.i  model.h.i  modlunit.h.i  nrnunit.c.i  parse1.y.i  passn.c.i  symbol.c.i  units.c.i  units.h.i  units1.c.i
nrn/.hg/store/data/src/mswin/: _env_var_update.nsh.in.i  _makefile.am.i  nrncygso.sh.in.i  nrnsetup.nsi.in.i  nrnsetupmingw.nsi.in.i
nrn/.hg/store/data/src/neuronmusic/: _makefile.am.i  neuronmusic.pxd.i  neuronmusic.pyx.i  nrnmusic.h.i  setup.py.in.i
nrn/.hg/store/data/src/ni__pci__6229/: _makefile.am.i  nrnni.cpp.i
nrn/.hg/store/data/src/nmodl/: _makefile.am.i  consist.c.i  cout.c.i  deriv.c.i  diffeq.y.i  discrete.c.i  init.c.i  io.c.i  kinetic.c.i  lex.l.i  list.c.i  modl.c.i  modl.h.i  nmodlfunc.h.i  noccout.c.i  nocpout.c.i  parsact.c.i  parse1.y.i  partial.c.i  sens.c.i  simultan.c.i  solve.c.i  symbol.c.i
nrn/.hg/store/data/src/npy27/: hg-empty-dir-workaround.i
nrn/.hg/store/data/src/nrncvode/: bbtqueue.cpp.i  bbtqueue.h.i  cvodeobj.cpp.i  cvodeobj.h.i  cvodestb.cpp.i  cvtrset.cpp.i  hocevent.cpp.i  netcon.h.i  netcvode.cpp.i  netcvode.h.i  nrndaspk.cpp.i  nrndaspk.h.i  occvode.cpp.i  rbtqueue.cpp.i  rbtqueue.h.i  spdaveb.c.i  spt2queue.cpp.i  spt2queue.h.i  sptbinq.cpp.i  sptbinq.h.i  sptfifoq.cpp.i  sptfifoq.h.i  sptqueue.cpp.i  sptqueue.h.i  sptree.h.i  tqueue.cpp.i  vrecitem.h.i
nrn/.hg/store/data/src/nrniv/: _makefile.am.i  bgpdma.cpp.i  bgpdmasetup.cpp.i  bgpmeminfo.c.i  cachevec.cpp.i  cxprop.cpp.i  finithnd.cpp.i  geometry3d.cpp.i  glinerec.cpp.i  have2want.cpp.i  hocmech.cpp.i  impedanc.cpp.i  kschan.cpp.i  kschan.h.i  kssingle.cpp.i  kssingle.h.i  linmod.cpp.i  linmod.h.i  linmod1.cpp.i  matrixmap.cpp.i  matrixmap.h.i  multisplit.cpp.i  multisplitcontrol.h.i  ndatclas.cpp.i  ndatclas.h.i  netpar.cpp.i  nonlinz.cpp.i  nrnclass.h.i  nrndae.cpp.i  nrndae.h.i  nrnhash.h.i  nrnhash__alt.h.i  nrniv__mf.h.i  nrnmenu.cpp.i  nrnmenu.h.i  nrnmusic.cpp.i  nrnmusic.h.i  nrnoc2iv.h.i  nrnpy.cpp.i  nrnrtime.cpp.i  (+26 more)
nrn/.hg/store/data/src/nrnjava/: _makefile.am.i  njvm.cpp.i  nrnjava.cpp.i  nrnjni.cpp.i
nrn/.hg/store/data/src/nrnmpi/: _makefile.am.i  bbsmpipack.c.i  bbsmpipack.h.i  mkdynam.sh.i  mpispike.c.i  mpispike.h.i  nrnmpi.c.i  nrnmpi__def__cinc.i  nrnmpi__dynam.c.i  nrnmpi__dynam__stubs.c.i  nrnmpi__impl.h.i  nrnmpidec.h.i
nrn/.hg/store/data/src/nrnoc/: _makefile.am.i  cabcode.c.i  cabvars.h.i  capac.c.i  clamp.c.i  (+32 more)
nrn/m4/: ivcheck.m4
nrn/share/lib/python/neuron/rxd/geometry3d/: CMakeLists.txt
nrn/src/nrnoc/: nrnversion.h
nrn/src/nrnpython/: CMakeLists.txt  MANIFEST.in  nrnpy_hoc.cpp  nrnpy_nrn.cpp  nrnpy_reg.h  nrnpython.cpp  nrnpython.h  setup.py  setup.py.in  setup_cmake.py.in
(+1046 files in other folders)
