cmake_minimum_required(VERSION 2.6)
FILE(GLOB NRNPYTHON_SRC "*.cpp")
add_definitions("-DUSE_PYTHON -fPIC")
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/../../src/oc" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/../../src/ivos" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/../../src/nrniv" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/../../src/ivoc" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/../../src/nrnoc" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/../../src/gnu" )
add_library(nrnpython ${NRNPYTHON_SRC})
